Fit Flamegraph Height Into Given Area

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             const colorScale = d3.scaleOrdinal(d3.schemeCategory10);
 
             const partition = d3.partition()
-                .size([width, height])
+                .size([height, width])
                 .padding(1)
                 .round(true);
 
